@@ -1,3 +1,7 @@
+2011-01-24  Xavier Perseguers  <typo3@perseguers.ch>
+
+	* Fixed bug #17267: Live search is unusable with Oracle
+
 2011-01-24  Oliver Hader  <oliver.hader@typo3.org>
 
 	* Fixed bug #17274: SQL error in Update Wizard of workspaces
